# pdkit

./: .gitignore  .readthedocs.yml  1 - TremorProcessor.ipynb  3 - TestResultSet.ipynb  CODE_OF_CONDUCT.md  Dockerfile  MANIFEST.in  Makefile  README.rst  readme-pypi.rst  requirements.txt  setup.py
.circleci/: config.yml
docs/: clinicalUPDRS.rst  code.rst  conf.py  docs-requirements.txt  gait.rst  index.rst  react.rst  references.bib  references_tapping.bib  requirements.txt  tapping.rst  testResultSet.rst  testResultSetOPDC.rst  tremor.rst  updrs.rst  utils.rst  voice.rst
html/: .buildinfo  gait.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tremor.html  utils.html
html/.doctrees/: environment.pickle  gait.doctree  index.doctree  tremor.doctree  utils.doctree
html/_static/: Makefile  conf.py  documentation_options.js  tremor.rst
notebooks/: 01 - TremorProcessor.ipynb  02 - FingerTapping.ipynb  03 - TestResultSet.ipynb  04 - UPDRS.ipynb  05 - ClinicalUPDRS.ipynb  06 - GaitProcessor.ipynb  07 - Gait_manual_segmentation.ipynb  08 - get_gait_returns.ipynb  09 - Initial and Final contacts.ipynb  1 - TremorProcessor.ipynb  10 - clustering_algorithms.ipynb  11 - manual_labeling.ipynb  12 - QoIProcessor.ipynb  2 - FingerTapping.ipynb  3 - TestResultSet.ipynb  4 - UPDRS.ipynb  5 - ClinicalUPDRS.ipynb  6 - GaitProcessor.ipynb  7 - Gait manual segmentation.ipynb  ACC_WALK_TURN_DETECTION.ipynb  Gait turning time.ipynb  GaitProcessor.ipynb  Initial and Final contacts.ipynb  New gait features.ipynb  QuickTest.ipynb  TremorProcessor.ipynb  Untitled.ipynb  Untitled2.ipynb  Working_with_kalaman.ipynb  classify_point.ipynb  clustering_algorithms.ipynb  freeze.ipynb  gait_gyro_data.ipynb  gait_loader_phone_app_data.ipynb  get_gait_returns.ipynb  hmm.ipynb  jupyter_notebook_config.py  new_datasets.ipynb  test_segmentation.ipynb  tremor features for a given folder.ipynb  (+2 more)
pdkit/: .gitignore  LICENSE  __init__.py  bradykinesia_processor.py  bradykinesia_time_series.py  classification.py  clinical_updrs.py  cluster_processor.py  dl_processor.py  finger_tapping_processor.py  finger_tapping_time_series.py  gait_processor.py  gait_processor.py.bak  gait_time_series.py  loaders.py  models.py  myspsolution.praat  processor.py  qoi_processor.py  quicktest_processor.py  reaction_processor.py  reaction_time_series.py  test_result_set.py  test_result_set_opdc.py  tremor_processor.py  tremor_time_series.py  updrs.py  utils.py  voice_processor.py
pdkit/voice_features/: __init__.py  deltas.py  dfa.py  dypsa.py  enframe.py  f0_thanasis.py  filters.py  glottis_quotient.py  gne_measure.py  hnr_fun.py  imf_measure.py  jitter_shimmer.py  melfbank.py  mfcc.py  ppe.py  rpde.py  spectral.py  tkeo.py  vfer_measure.py  voice_analysis_toolbox.py  wavedec_features.py
pdkit/voice_features/native/close_ret/: CMakeLists.txt  close_ret.c  close_ret_hook.py
pdkit/voice_features/native/libeemd/: CMakeLists.txt  eemd_hook.py
pdkit/voice_features/native/libeemd/src/: eemd.c
tests/: bradykinesia_processing-test.py  finger_tapping_processing-test.py  gait_processing-test.py  test_gait_processing.py  test_result_set-test.py  test_tremor_processing.py  test_voice_processor.py  tremor_processing-test.py
tests/data/: .~lock.cussp_dataframe.csv#  classification_clinical.csv  cloudupdrs_gait.csv  cussp_dataframe.csv  (+11 more)
(+52 files in other folders)
